[metadata]
name = sl10n
version = 0.1.0.2
description = Static localization system that reduces a headache of working with localization
author = SyberiaK
license = MIT
license_file = LICENSE
url = https://github.com/SyberiaK/sl10n
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Localization
    Topic :: Text Processing :: Linguistic
    Typing :: Typed

[options]
packages = sl10n
python_requires = >=3.8
package_dir =
    =src

[options.extras_require]
docs =
    mkdocs>=1.5.2
    mkdocstrings>=0.22.0
    mkdocstrings-python>=1.5.0
    mkdocs-material>=9.2.1
    mkdocs-git-revision-date-localized-plugin>=1.2.0
test =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    simplejson>=3.19.1
    ujson>=5.8.0

[options.package_data]
sl10n = py.typed
